// *********************************
// *********************************
// **** Database
// *********************************
// *********************************

Project GumGumLearn {
	database_type: 'PostgreSQL'
	Note: 'GumGumLearn Database'
}


// *********************************
// *********************************
// **** Users Table
// *********************************
// *********************************

Table users {
	user_id int [PK, increment, NOT NULL]
	uuid text
	username text [NOT NULL, UNIQUE]
	password_hash bytea
	password_salt bytea
	reset_code text
	local_language text
	date_joined timestamptz  [NOT NULL, DEFAULT: `now()`]
	Note: 'Table to hold all users'
}


// *********************************
// *********************************
// **** Vault Table
// *********************************
// *********************************

Table vault {
    vault_id int [PK, increment, NOT NULL]
    user_id int
    created_at timestamptz [NOT NULL, DEFAULT: `now()`]
    updated_at timestamptz [NOT NULL, DEFAULT: `now()`]
    Note: 'Table to hold vault objects belonging to a user'
}
Ref: vault.user_id - users.user_id [update: cascade, delete: cascade]


// *********************************
// *********************************
// **** Search Table
// *********************************
// *********************************

Table search {
    search_id int [PK, increment, NOT NULL]
    vault_id int
    created_at timestamptz [NOT NULL, DEFAULT: `now()`]
    updated_at timestamptz  [NOT NULL, DEFAULT: `now()`]
    word text
    translated_word text
    meanings json
    synonymns json
    antonymns json
    homophones json
    examples json
    online_examples json
    Note: 'Table to hold search objects containing words and their references'
}
Ref: search.vault_id > vault.vault_id [update: cascade, delete: cascade]


